--- a/index.html
+++ b/index.html
@@ -1309,7 +1309,7 @@
             <div class="featured-projects">
                 <div class="featured-card scroll-fade">
                     <div class="featured-video">
-                        <video src="DressBrainrotVid.mp4" muted loop playsinline></video>
+                        <video src="DressBrainrotVid%20(1).mp4" muted loop playsinline></video>
                     </div>
                     <div class="featured-content">
                         <div class="featured-header">
@@ -1325,18 +1325,18 @@
 
                 <div class="featured-card scroll-fade">
                     <div class="featured-video">
-                        <!-- Replace with: <video src="videos/game2-showcase.mp4" muted loop playsinline></video> -->
+                        <!-- Replace with: <video src="dressup-video.mp4" muted loop playsinline></video> -->
                         <div class="placeholder">
                             <i data-lucide="video" class="placeholder-icon"></i>
-                            <span>Game Video Coming Soon</span>
+                            <span>Video Coming Soon</span>
                         </div>
                     </div>
                     <div class="featured-content">
                         <div class="featured-header">
-                            <img src="images/game2-icon.png" alt="Game Name" class="game-icon">
-                            <h3 class="featured-title">Game Name Here</h3>
+                            <img src="Dressupp.png" alt="Dress Up" class="game-icon">
+                            <h3 class="featured-title">Dress Up</h3>
                         </div>
-                        <p class="featured-description">Brief description of the game - what it's about, what systems you built, player count, etc.</p>
+                        <p class="featured-description">Brief description of the game - what it's about, what systems you built, etc.</p>
                         <a href="https://www.roblox.com/games/GAMEID" target="_blank" class="btn btn-primary">
                             <i data-lucide="play"></i> Play on Roblox
                         </a>
