--- a/index.html
+++ b/index.html
@@ -1336,7 +1336,7 @@
                             <img src="Dressupp.png" alt="Dress Up" class="game-icon">
                             <h3 class="featured-title">Dress Up</h3>
                         </div>
-                        <p class="featured-description">Brief description of the game - what it's about, what systems you built, etc.</p>
+                        <p class="featured-description">Dress up your character and level up with XP. Show off on stage with custom camera angles, 3D character viewer, item equipping, podium system, leaderboards, and more.</p>
                         <a href="https://www.roblox.com/games/GAMEID" target="_blank" class="btn btn-primary">
                             <i data-lucide="play"></i> Play on Roblox
                         </a>
