--- a/index.html
+++ b/index.html
@@ -634,10 +634,12 @@
             overflow: hidden;
         }
 
-        .featured-video video {
+        .featured-video video,
+        .featured-video iframe {
             width: 100%;
             height: 100%;
             object-fit: cover;
+            border: none;
         }
 
         .featured-video .placeholder {
@@ -1309,7 +1311,7 @@
             <div class="featured-projects">
                 <div class="featured-card scroll-fade">
                     <div class="featured-video">
-                        <video src="DressBrainrotVid%20(1).mp4" muted loop playsinline></video>
+                        <iframe src="https://streamable.com/e/rprotv?autoplay=1&muted=1&loop=1" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
                     </div>
                     <div class="featured-content">
                         <div class="featured-header">
