--- a/index.html
+++ b/index.html
@@ -1365,11 +1365,15 @@
             <div class="projects-grid">
                 <div class="project-card scroll-fade">
                     <div class="project-video">
-                        <div class="placeholder">
-                            <i data-lucide="video" class="placeholder-icon"></i>
-                        </div>
+                        <iframe src="https://streamable.com/e/h49mnq?autoplay=1&muted=1&loop=1" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
                     </div>
-                    <div class="project-title">Round System</div>
+                    <div class="project-title">Inventory System</div>
+                </div>
+                <div class="project-card scroll-fade">
+                    <div class="project-video">
+                        <iframe src="https://streamable.com/e/5ya1xy?autoplay=1&muted=1&loop=1" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+                    </div>
+                    <div class="project-title">Rebirth System</div>
                 </div>
                 <div class="project-card scroll-fade">
                     <div class="project-video">
@@ -1379,15 +1383,33 @@
                 </div>
                 <div class="project-card scroll-fade">
                     <div class="project-video">
+                        <iframe src="https://streamable.com/e/5gk4o6?autoplay=1&muted=1&loop=1" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+                    </div>
+                    <div class="project-title">Mutations System</div>
+                </div>
+                <div class="project-card scroll-fade">
+                    <div class="project-video">
+                        <iframe src="https://streamable.com/e/gkvya5?autoplay=1&muted=1&loop=1" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+                    </div>
+                    <div class="project-title">Round System</div>
+                </div>
+                <div class="project-card scroll-fade">
+                    <div class="project-video">
+                        <iframe src="https://streamable.com/e/6w0q5j?autoplay=1&muted=1&loop=1" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+                    </div>
+                    <div class="project-title">Index System</div>
+                </div>
+                <div class="project-card scroll-fade">
+                    <div class="project-video">
                         <iframe src="https://streamable.com/e/te2vcd?autoplay=1&muted=1&loop=1" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
                     </div>
                     <div class="project-title">Data Saving</div>
                 </div>
                 <div class="project-card scroll-fade">
                     <div class="project-video">
-                        <iframe src="https://streamable.com/e/h49mnq?autoplay=1&muted=1&loop=1" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+                        <iframe src="https://streamable.com/e/6ot9p4?autoplay=1&muted=1&loop=1" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
                     </div>
-                    <div class="project-title">Inventory System</div>
+                    <div class="project-title">Multi Block Picking</div>
                 </div>
                 <div class="project-card scroll-fade">
                     <div class="project-video">
@@ -1397,9 +1419,23 @@
                 </div>
                 <div class="project-card scroll-fade">
                     <div class="project-video">
+                        <iframe src="https://streamable.com/e/a15ovg?autoplay=1&muted=1&loop=1" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+                    </div>
+                    <div class="project-title">Rewards System</div>
+                </div>
+                <div class="project-card scroll-fade">
+                    <div class="project-video">
                         <iframe src="https://streamable.com/e/8up9ij?autoplay=1&muted=1&loop=1" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
                     </div>
                     <div class="project-title">Shop System</div>
+                </div>
+                <div class="project-card scroll-fade">
+                    <div class="project-video">
+                        <div class="placeholder">
+                            <i data-lucide="video" class="placeholder-icon"></i>
+                        </div>
+                    </div>
+                    <div class="project-title">Weather System</div>
                 </div>
             </div>
         </div>
