--- a/index.html
+++ b/index.html
@@ -1389,9 +1389,9 @@
                 </div>
                 <div class="project-card scroll-fade">
                     <div class="project-video">
-                        <iframe src="https://streamable.com/e/gkvya5?autoplay=1&muted=1&loop=1" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+                        <iframe src="https://streamable.com/e/gknj25?autoplay=1&muted=1&loop=1" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
                     </div>
-                    <div class="project-title">Round System</div>
+                    <div class="project-title">Round & Tutorial System</div>
                 </div>
                 <div class="project-card scroll-fade">
                     <div class="project-video">
@@ -1431,9 +1431,7 @@
                 </div>
                 <div class="project-card scroll-fade">
                     <div class="project-video">
-                        <div class="placeholder">
-                            <i data-lucide="video" class="placeholder-icon"></i>
-                        </div>
+                        <iframe src="https://streamable.com/e/n10b4f?autoplay=1&muted=1&loop=1" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
                     </div>
                     <div class="project-title">Weather System</div>
                 </div>
