--- a/index.html
+++ b/index.html
@@ -955,6 +955,14 @@
             color: var(--text-gray);
         }
 
+        .pricing-disclaimer {
+            font-size: 12px;
+            color: var(--text-gray);
+            opacity: 0.7;
+            margin-bottom: 20px;
+            font-style: italic;
+        }
+
         /* FAQ Section */
         .faq-container {
             max-width: 800px;
@@ -1571,6 +1579,7 @@
                         <span class="pricing-tag">Fast Delivery</span>
                         <span class="pricing-tag">Clean Code</span>
                     </div>
+                    <p class="pricing-disclaimer">General starting price. DM me for a tailored quote based on your project.</p>
                     <a href="#contact" class="btn btn-primary" style="width: 100%;">Get Started</a>
                 </div>
                 <div class="pricing-card scroll-fade">
@@ -1583,18 +1592,20 @@
                         <span class="pricing-tag">Documented</span>
                         <span class="pricing-tag">Support</span>
                     </div>
+                    <p class="pricing-disclaimer">General starting price. DM me for a tailored quote based on your project.</p>
                     <a href="#contact" class="btn btn-primary" style="width: 100%;">Get Started</a>
                 </div>
                 <div class="pricing-card scroll-fade">
                     <div class="pricing-icon"><i data-lucide="gamepad-2"></i></div>
                     <h3 class="pricing-name">Full Game Development</h3>
-                    <div class="pricing-price">$600 USD+</div>
+                    <div class="pricing-price">$700 USD+</div>
                     <p class="pricing-description">Complete Roblox game from start to finish. All systems, UI, backend, saving, and gameplay — fully optimized with post-launch support included.</p>
                     <div class="pricing-tags">
                         <span class="pricing-tag">Full-Stack</span>
                         <span class="pricing-tag">Optimized</span>
                         <span class="pricing-tag">Post-Launch Support</span>
                     </div>
+                    <p class="pricing-disclaimer">General starting price. DM me for a tailored quote based on your project.</p>
                     <a href="#contact" class="btn btn-primary" style="width: 100%;">Get Started</a>
                 </div>
             </div>
