--- a/index.html
+++ b/index.html
@@ -1354,10 +1354,10 @@
                     <div class="featured-content">
                         <div class="featured-header">
                             <img src="Dressupp.png" alt="Dress Up" class="game-icon">
-                            <h3 class="featured-title">Dress Up</h3>
+                            <h3 class="featured-title">Dress To Win</h3>
                         </div>
                         <p class="featured-description">Dress up your character and level up with XP. Show off on stage with custom camera angles, 3D character viewer, item equipping, podium system, leaderboards, and more.</p>
-                        <a href="https://www.roblox.com/games/GAMEID" target="_blank" class="btn btn-primary">
+                        <a href="https://www.roblox.com/games/113444668706153/Dress-To-Win" target="_blank" class="btn btn-primary">
                             <i data-lucide="play"></i> Play on Roblox
                         </a>
                     </div>
